# canoe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Brewfile  CMakeLists.txt  CODEOWNERS  LICENSE  README  README-actions.md  README-fork.md  README-lfs.md  README.md  THIS_MAY_BREAK  configure.h.in  configure.hpp.in  main.cpp  main.cpp.in  packages_centos.txt  packages_debian.txt  requirements.txt  source_pleiades.sh  source_resnick.sh
data/: .gitignore  CMakeLists.txt  HITRAN2012.par  README  check_data_integrity.sh  checksums.txt  cosmic_abundance.txt  fetch_H2-He-cia.sh  fetch_data.sh  fetch_exogcm_opacity.sh  fetch_hitran2012.sh  fetch_hitran2020.sh  fetch_jup_atm_moses_modelc.sh  fetch_jup_midir_H2broaden.sh  new_jup_lat30_modelc.txt
data/Galileo/: GalileoGPMS.txt  GalileoProbeTp_Seiff.98.txt  GalileoRadio_Folkner.98.txt
examples/: CMakeLists.txt  giants_add_absorber.cpp  jupiter_opacity.yaml
examples/1d-rad-jupiter/: CMakeLists.txt  test_jupiter_re.cpp  test_jupiter_re.cpp_
examples/2018-Li-harp/: CMakeLists.txt  giants-ck.yaml  giants-lbl.yaml  giants-op.yaml  giants_ir.inp  giants_ir.yaml  giants_re.cpp  giants_re.inp  giants_re_mods.cpp  giants_re_pgen.cpp  giants_visir.yaml  new_jup_lat30_modelc.atm  new_nep_lat30_modelc.atm  new_sat_lat30_modelc.atm  new_uran_lat30_modelc.atm  run_cktable_giants.py  run_ktable_giants.py  test_jupiter_re.cpp
examples/2019-CLi-snap/: robert.cpp  robert3d.inp  sedimentation.inp
examples/2019-Li-snap/: .gitattributes  CMakeLists.txt  ammonia-kessler.yaml  bryan-thermo.yaml  bryan.cpp  bryan.cpp.new  bryan.cpp.old  bryan.inp  bryan_mods.cpp  bryan_output.nc  bryan_pgen.cpp  bryan_vapor_functions.hpp  earth-moist.yaml  earth-precip.yaml  jcrm.cpp  jcrm.inp  jup-micro.yaml  jup-precip.yaml  jup-thermo-H2O-NH3.yaml  jup-thermo-reduced.yaml  jup-thermo.yaml  jupiter2d.inp  jupiter3d.inp  jupiter_crm.cpp  jvortex.cpp  jvortex.inp  lstraka.cpp  lstraka.inp  lstraka.yaml  lstraka2.cpp  plot_straka.py  robert.cpp  robert2d.inp  robert2d.yaml  robert3d.inp  robert3d_output.nc  robert_output.nc  sedimentation.cpp  sedimentation.inp  straka-thermo.yaml  (+9 more)
examples/2020-Li-polar-vortex/: .gitattributes  CMakeLists.txt  fig_g_intruder.inp  intruder_85.txt  intruder_output.nc  polar_vortex.cpp  shallow_water.cpp  shallow_water.inp  shallow_xy.cpp  swxy_output.nc  test_polar_vortex.py  test_shallow.py  test_shallow_water.py  test_shallow_xy.py
examples/2023-CLi-saturn-vla/: saturn_radio.inp
examples/2023-CLi-uranus/: CMakeLists.txt
examples/2023-Chen-exo3/: .gitattributes  CMakeLists.txt  W92.cpp  W92.inp  W92_two_layer.inp  calc_avg.py  calc_avg_pres.py  calculate_psi.py  convert_to_cart.py  convert_to_polar.py  dam_break_cart.inp  earth-dry.yaml  generate_plots.py  height_to_pres.py  height_to_sigma.py  hot-jupiter.yaml  hot_jupiter.cpp  hot_jupiter.inp  hs94-ci.inp  hs94-stable20.inp  hs94-test.inp  hs94.cpp  hs94.inp  hs94_polar.cpp  hs94_polar.inp  jupiter_crm.cpp  jupiter_crm.inp  jvort_2d.cpp  jvort_2d.inp  polar_dry.cpp  polar_dry.inp  sphere_noise_demo.py  steady_zonal.cpp  steady_zonal.inp  test_adiabat.cpp  test_adiabat.inp  test_blast.cpp  test_blast.inp  test_blast.py  test_blast_192.inp  (+8 more)
examples/2023-Hu-pydisort/: .gitignore
examples/2023-Li-saturn-vla/: CMakeLists.txt  radio_channels.yaml  saturn.yaml  saturn_radio.cpp  saturn_vla-disk-1.6.inp
examples/2023-Li-uranus/: CMakeLists.txt  uranus.inp  uranus_mwr.cpp
examples/2023-Linf-lava/: CMakeLists.txt  balance_atm.txt  lava.cpp  lava.inp  lava.yaml
examples/2023-SChen-exo3/: CMakeLists.txt  dam_break.cpp
examples/2023-jupiter-mwr-eq/: CMakeLists.txt  juno.cpp  juno.inp  juno_mwr.cpp  juno_mwr.inp  juno_mwr_mods.cpp  juno_mwr_pgen.cpp  juno_mwr_specs.hpp  jupiter_atm.yaml  mwr_channels.yaml  mwr_inversion.yaml  species.yaml
examples/2024-CLi-RCEMIP/: CMakeLists.txt  rce_small.inp  rcemip-noprecip.yaml  (+2 more)
python/: CMakeLists.txt  CMakeLists.txt.sav  aiur.cpp  empty.cpp  pyathena.cpp  pycanoe.cpp  pyharp.cpp  pyinversion.cpp  pyopacity.cpp  pysnap.cpp  pyutils.cpp  utilities.cpp
src/: CMakeLists.txt  add_arg.h  air_parcel.cpp  air_parcel.hpp  banner.cpp  checks.cpp  checks.hpp  common.hpp  constants.hpp  conversion.hpp  dirty.hpp  fix.py  impl.cpp  impl.hpp  index_map.cpp  index_map.hpp  mesh_destroy.cpp  mesh_redo.cpp  mesh_setup.cpp  schedulers.cpp  schedulers.hpp  setup_mesh.hpp  variable.cpp  variable.hpp  virtual_groups.cpp  virtual_groups.hpp
tests/: CMakeLists.txt  device_testing.hpp  earth-thermo.yaml  example_bands.yaml  example_chemistry.yaml  example_infrared.yaml  example_microwave.yaml  example_opacity.yaml  example_radio.yaml  giants_add_absorber.cpp  giants_enroll_vapor_functions.cpp  globals.cpp.in  helio_ck.yaml  hot_jupiter.inp  jup-thermo.yaml  pvfmm_utils.hpp  test_absorber.cpp  test_air_parcel.cpp  test_ammonium_hydrosulfide.cpp  test_ammonium_hydrosulfide.inp  test_convective_adjustment.cpp  test_convective_adjustment.inp  test_cs_velocity_rotation.cpp  test_earth_thermo.cpp  test_eos.cpp  test_glog.cpp  test_helios_ck.inp  test_helios_ck_read.cpp  test_hydro.cpp  test_impl.cpp  test_jup_thermo.cpp  test_lava.cpp  test_mesh.cpp  test_mesh.inp  test_microphysics.cpp  test_microphysics.inp  test_microwave_opacity.cpp  test_microwave_opacity.cpp_  test_moist_adiabat.cpp  test_moist_adiabat.inp  (+17 more)
tools/: CMakeLists.txt  README_linfel  atm_profile_utils.py  canoe.py  canoe.py.in  check_artifact.sh  check_style.sh  cktable.py.in  clean_rfm_runs.sh  combine.py  example_earth.yaml  example_earth_flux.yaml  example_earth_rt.yaml  example_giants_ir.inp  example_giants_ir.yaml  example_hitran.yaml  example_jupiter_rt.yaml  generate_opacity.py  hitbin.f  hitbin.f90  kcoeff.cpp  main2mcmc.py  parse_code.py  rfmlib.py  run_cktable.py  run_cktable.py.in  run_disort_flux.py  run_disort_jupiter.py  run_disort_rt.py  run_disort_rt.py.in  run_disort_rt_new.py  run_ktable.py  run_ktable.py.in  run_ktable_hitran.py  run_ktable_jup.py.in  run_ktable_lava.py  run_ktable_new.py  run_ktable_simple.py  run_ktable_simple.py.in  run_rfm.py
(+1024 files in other folders)
